--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,84 +1,75 @@
 <div class="search">
-  <form #form="ngForm" (ngSubmit)="onSubmit()">
+  <form #form="ngForm" (submit)="onSubmit()">
     <input type="text" class="searchbar" placeholder="Search city..." [(ngModel)]="cityName" name="city">
   </form>
 </div>
 
-<!-- Loading State -->
-<div *ngIf="isLoading">
+@if (isLoading) {
   <p>Loading...</p>
-</div>
-
-<!-- Weather Data -->
-<div *ngIf="!isLoading" class="container">
-  <div class="upper">
-    <!-- Image Based on Temperature -->
-    <img *ngIf="weatherData.current?.temp_c < 15" src="https://www.findingtheuniverse.com/wp-content/uploads/2017/01/Blue2Bhour2BFinland_by_Laurence2BNorah.jpg" alt="">
-    <img *ngIf="weatherData.current?.temp_c >= 15" src="https://scopeblog.stanford.edu/wp-content/uploads/2022/07/AdobeStock_268489083-scaled.jpeg" alt="">
-
-    <div class="weather-data">
-      <div class="location">{{ weatherData.location?.name }}</div>
-
-      <!-- Temperature Display -->
-      <div class="temperature">
-        {{ isCelsius ? (weatherData.current?.temp_c | number: '1.0-0') : (weatherData.current?.temp_f | number: '1.0-0') }}°{{ isCelsius ? 'C' : 'F' }}
+} @else {
+  <div class="container">
+    <div class="upper">
+      @if (weatherData.current?.temp_c < 15) {
+        <img src="https://www.findingtheuniverse.com/wp-content/uploads/2017/01/Blue2Bhour2BFinland_by_Laurence2BNorah.jpg" alt="">
+      }
+      @else {
+        <img src="https://scopeblog.stanford.edu/wp-content/uploads/2022/07/AdobeStock_268489083-scaled.jpeg" alt="">
+      }
+      <div class="weather-data">
+        <div class="location">{{ weatherData.location?.name }}</div>
+        <div class="temperature">
+          {{ weatherData.current?.temp_c | number: '1.0-0' }}°C
+        </div>
+        <div class="inf">{{ weatherData.current?.condition?.text }}</div>
       </div>
-
-      <div class="inf">{{ weatherData.current?.condition?.text }}</div>
     </div>
-  </div>
-
-  <div class="lower">
-    <div class="more-info-label">
-      More Information
-    </div>
-
-    <div class="more-info-container">
-      <!-- Dewpoint -->
-      <div class="info-block">
-        <div class="info-block-label">
-          <img class="min-img" src="https://cdn-icons-png.flaticon.com/512/5118/5118028.png" alt="">
-          <span>min</span>
-        </div>
-        <div class="info-block-value">
-          {{ isCelsius ? weatherData.current?.dewpoint_c : weatherData.current?.dewpoint_f }}°{{ isCelsius ? 'C' : 'F' }}
-        </div>
+    <div class="lower">
+      <div class="more-info-label">
+        More Information
       </div>
 
-      <!-- Heatindex -->
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="https://cdn-icons-png.flaticon.com/512/1843/1843544.png" alt="">
-          <span>max</span>
+      <div class="more-info-container">
+        <div class="info-block">
+          <div class="info-block-label">
+            <img class="min-img" src="https://cdn-icons-png.flaticon.com/512/5118/5118028.png" alt="">
+            <span>min</span>
+          </div>
+          <div class="info-block-value">
+            {{ weatherData.current?.dewpoint_c }}°C
+          </div>
         </div>
-        <div class="info-block-value">
-          {{ isCelsius ? weatherData.current?.heatindex_c : weatherData.current?.heatindex_f }}°{{ isCelsius ? 'C' : 'F' }}
-        </div>
-      </div>
 
-      <!-- Humidity -->
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="https://static.thenounproject.com/png/1512650-200.png" alt="">
-          <span>humidity</span>
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="https://cdn-icons-png.flaticon.com/512/1843/1843544.png" alt="">
+            <span>max</span>
+          </div>
+          <div class="info-block-value">
+            {{ weatherData.current?.heatindex_c }}°C
+          </div>
         </div>
-        <div class="info-block-value">
-          {{ weatherData.current?.humidity }}%
-        </div>
-      </div>  
 
-      <!-- Wind -->
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="https://icon-library.com/images/wind-icon-png/wind-icon-png-27.jpg" alt="">
-          <span>wind</span>
-        </div>
-        <div class="info-block-value">
-          {{ isKmh ? weatherData.current?.wind_kph : weatherData.current?.wind_mph }} {{ isKmh ? 'km/h' : 'mph' }}
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="https://static.thenounproject.com/png/1512650-200.png" alt="">
+            <span>humidity</span>
+          </div>
+          <div class="info-block-value">
+            {{ weatherData.current?.humidity }}%
+          </div>
+        </div>  
+
+        <div class="info-block">
+          <div class="info-block-label">
+            <img src="https://icon-library.com/images/wind-icon-png/wind-icon-png-27.jpg" alt="">
+            <span>wind</span>
+          </div>
+          <div class="info-block-value">
+            {{ weatherData.current?.wind_kph }} km/h
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
+}
 <router-outlet></router-outlet>
