--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <div class="search">
   <form #form="ngForm" (submit)="onSubmit()">
-    <div class="search-container">
-      <input type="text" class="searchbar" placeholder="Search city..." [(ngModel)]="cityName" name="city">
-      <button type="submit" class="search-button">Search</button>
-    </div>
+    <input type="text" class="searchbar" placeholder="Search city..." [(ngModel)]="cityName" name="city">
   </form>
 </div>
 
 @if (isLoading) {
-  <div class="loading-spinner"></div>
+  <p>Loading...</p>
 } @else {
   <div class="container">
     <div class="upper">
@@ -21,11 +18,7 @@
       <div class="weather-data">
         <div class="location">{{ weatherData.location?.name }}</div>
         <div class="temperature">
-<<<<<<< HEAD
           {{ weatherData.current?.temp_c | number: '1.0-0' }}°C
-=======
-          {{ isCelsius ? (weatherData.current?.temp_c | number: '1.0-0') : (weatherData.current?.temp_f | number: '1.0-0') }}°{{ isCelsius ? 'C' : 'F' }}
->>>>>>> unit-conversion
         </div>
         <div class="inf">{{ weatherData.current?.condition?.text }}</div>
       </div>
@@ -42,11 +35,7 @@
             <span>min</span>
           </div>
           <div class="info-block-value">
-<<<<<<< HEAD
             {{ weatherData.current?.dewpoint_c }}°C
-=======
-            {{ isCelsius ? weatherData.current?.dewpoint_c : weatherData.current?.dewpoint_f }}°{{ isCelsius ? 'C' : 'F' }}
->>>>>>> unit-conversion
           </div>
         </div>
 
@@ -56,11 +45,7 @@
             <span>max</span>
           </div>
           <div class="info-block-value">
-<<<<<<< HEAD
             {{ weatherData.current?.heatindex_c }}°C
-=======
-            {{ isCelsius ? weatherData.current?.heatindex_c : weatherData.current?.heatindex_f }}°{{ isCelsius ? 'C' : 'F' }}
->>>>>>> unit-conversion
           </div>
         </div>
 
@@ -80,11 +65,7 @@
             <span>wind</span>
           </div>
           <div class="info-block-value">
-<<<<<<< HEAD
             {{ weatherData.current?.wind_kph }} km/h
-=======
-            {{ isKmh ? weatherData.current?.wind_kph : weatherData.current?.wind_mph }} {{ isKmh ? 'km/h' : 'mph' }}
->>>>>>> unit-conversion
           </div>
         </div>
       </div>
