--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
             <span>wind</span>
           </div>
           <div class="info-block-value">
-            {{ weatherData.current?.wind_kph }} km/h
+            {{ weatherData.current?.wind_kph }} km per h
           </div>
         </div>
       </div>
