--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <input 
         type="text" 
         class="search-input" 
-        placeholder="Search city..." 
+        placeholder="Search city......" 
         [(ngModel)]="cityName" 
         name="city"
         required
