--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="lower">
       <div class="more-info-label">
-        More Information
+        More Details
       </div>
 
       <div class="more-info-container">
